--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
     <head>
         <title>DELI-VERY</title>
+        <meta charset ="utf-8"/>
+
     </head>
     <body>
         <h1>Hello World!!!</h1>
+        <p> This is the second sentence</p>
     </body>
+    
 </html>
