--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>DELI-VERY</title>
+        <title>Page title shown in window title</title>
         <meta charset ="utf-8"/>
 
     </head>
     <body>
-        <h1>Hello World!!!</h1>
+        <h1>This is the main heading. </h1>
+        <h2>This is a subheading h2</h2>
         <p> This is the second sentence</p>
     </body>
     
