--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,8 @@
     <body>
         <h1>This is the main heading. </h1>
         <h2>This is a subheading h2</h2>
-        <p> This is the second sentence</p>
+        <p> This is the second sentence.</p>
+        <div>Här har vi kört en div, det blir såhär. </div>
     </body>
     
 </html>
