--- a/views/index.html
+++ b/views/index.html
@@ -6,10 +6,15 @@
 
     </head>
     <body>
-        <h1>This is the main heading. </h1>
-        <h2>This is a subheading h2</h2>
-        <p> This is the second sentence.</p>
-        <div>Här har vi kört en div, det blir såhär. </div>
+        <h1> Welcome to BurgersBurgersBurgers online! </h1>
+        <h2> Select burger</h2>
+        <p> This is where you choose your burger</p>
+        
+        
+        <h2> Customer information </h2>
+        <p> This is where you provide necessary information</p>
+        <h3> Delivery information </h3>
+        <div> Här har vi kört en div, det blir såhär. </div>
     </body>
     
 </html>
