--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,8 @@
         <h2> Customer information </h2>
         <p> This is where you provide necessary information</p>
         <h3> Delivery information </h3>
-        <div> Här har vi kört en div, det blir såhär. </div>
+
+        <footer> My contact details are none of your business </footer>
     </body>
     
 </html>
