--- a/views/index.html
+++ b/views/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Page title shown in window title</title>
-        <meta charset ="utf-8"/>
+  <head>
+    <title>Page title shown in window title</title>
+    <meta charset="utf-8" />
+  </head>
 
-    </head>
-    <body>
-        <h1> Welcome to BurgersBurgersBurgers online! </h1>
-        <h2> Select burger</h2>
-        <p> This is where you choose your burger</p>
-        
-        
-        <h2> Customer information </h2>
-        <p> This is where you provide necessary information</p>
-        <h3> Delivery information </h3>
+  <body>
+    <main>
+      <h1>Welcome to BurgersBurgersBurgers online!</h1>
+    </main>
+    <h2>Select burger</h2>
+    <p>This is where you choose your burger</p>
 
-        <footer> My contact details are none of your business </footer>
-    </body>
-    
+    <h2>Customer information</h2>
+    <p>This is where you provide necessary information</p>
+    <h3>Delivery information</h3>
+
+    <footer>My contact details are none of your business</footer>
+  </body>
 </html>
