--- a/views/index.html
+++ b/views/index.html
@@ -9,13 +9,16 @@
     <main>
       <h1>Welcome to BurgersBurgersBurgers online!</h1>
     </main>
-    <h2>Select burger</h2>
-    <p>This is where you choose your burger</p>
+    <section>
+      <h2>Select burger</h2>
+      <p>This is where you choose your burger</p>
+    </section>
 
-    <h2>Customer information</h2>
-    <p>This is where you provide necessary information</p>
-    <h3>Delivery information</h3>
-
+    <section>
+      <h2>Customer information</h2>
+      <p>This is where you provide necessary information</p>
+      <h3>Delivery information</h3>
+    </section>
     <footer>My contact details are none of your business</footer>
   </body>
 </html>
