--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,8 @@
     <section>
       <h2>Select burger</h2>
       <p>This is where you choose your burger</p>
+      <h2>The cartoon burger</h2>
+      <img src="https://i.pinimg.com/originals/97/db/40/97db403e45dfe7de86b1b8773dfec9a6.jpg" alt="Krabby Patty" title="Krabby Patty" width="200">
     </section>
 
     <section>
@@ -20,7 +22,7 @@
       <p>This is where you provide necessary information</p>
       <h3>Delivery information</h3>
     </section>
-    
+
     <hr>
     <footer>My contact details are none of your business</footer>
   </body>
