--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,18 @@
       <p>This is where you choose your burger</p>
       <h2>The cartoon burger</h2>
       <img src="https://i.pinimg.com/originals/97/db/40/97db403e45dfe7de86b1b8773dfec9a6.jpg" alt="Krabby Patty" title="Krabby Patty" width="200">
+        <ul> 
+            <li>Tasty fictional burger</li>
+            <li>Free of calories</li>
+            <li>Guaranteed watery</li>
+        </ul>
+        <div><p>Goes well with this burger:</p></div>
+        <ol>
+            <li>Beer 1</li>
+            <li>Milk</li>
+            <li>Fish sauce</li>
+        </ol>
+    
     </section>
 
     <section>
