--- a/views/index.html
+++ b/views/index.html
@@ -64,6 +64,36 @@
               </ol>
             </td>
           </tr>
+          <tr>
+            <td>
+              <ul>
+                <li>Insane drawn burger</li>
+                <li>Free of anything</li>
+                <li>Guaranteed earthy</li>
+              </ul>
+              <div><p>Goes well with this burger:</p></div>
+              <ol>
+                <li>Beer 2</li>
+                <li>Water</li>
+                <li>A Colour Palette</li>
+              </ol>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <ul>
+                <li>Anything but a pickle</li>
+                <li>Free of pickles</li>
+                <li>Guaranteed free of pickles</li>
+              </ul>
+              <div><p>Goes well with this burger:</p></div>
+              <ol>
+                <li>Tasty beer</li>
+                <li>Wine</li>
+                <li>Whiskey</li>
+              </ol>
+            </td>
+          </tr>
         </tbody>
       </table>
     </section>
