--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
                 <li>Free of anything</li>
                 <li>Guaranteed earthy</li>
               </ul>
-              <div><a>Goes well with this burger:</a></div>
+              <div><p>Goes well with this burger:</p></div>
               <ol>
                 <li>Beer 2</li>
                 <li>Water</li>
