After table is created in index

--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
             <td>
               <img
                 src="https://i.pinimg.com/originals/97/db/40/97db403e45dfe7de86b1b8773dfec9a6.jpg"
-                alt="Krabby Patty"
+                alt="Krabby Patty burger"
                 title="Krabby Patty"
                 width="200"
               />
